initially working and slightly cleaned up

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,9 @@ pulumi = "<4.0.0,>=3.0.0"
 pulumi-aws = "<7.0.0,>=6.0.2"
 pulumi-awsx = "*"
 requests = "*"
-pulumiverse-talos = "*"
+# too confusing for now...
+# pulumiverse-talos = "*"
+pulumi-command = "*"
 
 [dev-packages]
 
